--- a/index.html
+++ b/index.html
@@ -9,45 +9,54 @@
 <body>
     <main>
         <header class="titulo">
-            <p class="mes-do-ano">JANEIRO</p>
+            <p class="mes-atual">JANEIRO</p>
             <p class="ano-atual">2025</p>
         </header>
+        <section class="dias-da-semana">
+            <div class="dia">Dom</div>
+            <div class="dia">Seg</div>
+            <div class="dia">Ter</div>
+            <div class="dia">Qua</div>
+            <div class="dia">Qui</div>
+            <div class="dia">Sex</div>
+            <div class="dia">Sáb</div>
+        </section>
         <section class="calendario">
-            <div class="item" data-dia="1"></div>
-            <div class="item" data-dia="2"></div>
-            <div class="item" data-dia="3"></div>
-            <div class="item" data-dia="4"></div>
-            <div class="item" data-dia="5"></div>
-            <div class="item" data-dia="6"></div>
-            <div class="item" data-dia="7"></div>
-            <div class="item" data-dia="8"></div>
-            <div class="item" data-dia="9"></div>
-            <div class="item" data-dia="10"></div>
-            <div class="item" data-dia="11"></div>
-            <div class="item" data-dia="12"></div>
-            <div class="item" data-dia="13"></div>
-            <div class="item" data-dia="14"></div>
-            <div class="item" data-dia="15"></div>
-            <div class="item" data-dia="16"></div>
-            <div class="item" data-dia="17"></div>
-            <div class="item" data-dia="18"></div>
-            <div class="item" data-dia="19"></div>
-            <div class="item" data-dia="20"></div>
-            <div class="item" data-dia="21"></div>
-            <div class="item" data-dia="22"></div>
-            <div class="item" data-dia="23"></div>
-            <div class="item" data-dia="24"></div>
-            <div class="item" data-dia="25"></div>
-            <div class="item" data-dia="26"></div>
-            <div class="item" data-dia="27"></div>
-            <div class="item" data-dia="28"></div>
-            <div class="item" data-dia="29"></div>
-            <div class="item" data-dia="30"></div>
-            <div class="item" data-dia="31"></div>
-            <div class="item" data-dia="32"></div>
-            <div class="item" data-dia="33"></div>
-            <div class="item" data-dia="34"></div>
-            <div class="item" data-dia="35"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
         </section>
     </main>
 
